# odd-lots

./: README.md  pyproject.toml  sent_episodes.json
.github/workflows/: odd-lots-emailer.yml
src/odd_lots/: __init__.py  app.py
tests/: test_app.py
